2014-04-21  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.9.0-rc3 Released.

	* chan_sip: Add sendrpid trust options

	  In r411189, some behavior was changed which made sendrpid behavior
	  act in a more trusting manner by sending full user data for peers
	  set with private caller presence in P-Asserted-Identity headers.
	  Since this changed long time expected behaviors, we decided to pull
	  that patch when that was pointed out by the community. Instead, this
	  patch provides a trust_id_outbound setting which will expose the data
	  per RFC-3325 if set to 'yes' and simply not send the PAI/RPID headers
	  at all if set to 'no'. By default trust_id_outbound will be set to
	  'legacy' which will preserve the behavior prior to these patches.
	  Extra special thanks to Walter Doekes for providing advice and
	  feedback.

2014-04-14  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.9.0-rc2 Released.

	* autoservice: fix reference leak of logger callid.

	  autoservice acquires a local reference to the logger callid of each
	  channel in a loop.  This local reference was not released, causing
	  the callid of every channel in autoservice to leak. This change moves
	  the callid unref inside the loop.

	  ASTERISK-23616 #close
	  Reported by: ibercom

	* app_voicemail: fix missing symbol

	  ASTERISK-23391 caused a regression where the symbol 'defaultlanguage'
	  was used by app_voicemail but not exported by main/asterisk. This
	  change renames the variable to ast_defaultlanguage. The variable was
	  already renamed in Asterisk 12+.

	  (closes issue ASTERISK-23559)
	  Reported by: Corey Farrell

2014-03-28  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.9.0-rc1 Released.

2014-03-28 17:44 +0000 [r411531]  Alexandr Anikin <may@telecom-service.ru>

	* addons/ooh323c/src/oochannels.c,
	  addons/ooh323c/src/ooCmdChannel.c, addons/ooh323c/src/ooq931.c,